# wanikani-api-reading-practice

./: .env.example  .gitignore  README.md  pyproject.toml
src/wk_reading/: __init__.py  __main__.py  cli.py  config.py  db.py  selectors.py  sync.py  wanikani_client.py
