[project]
name = "wk-reading"
version = "0.1.0"
description = "Personal WaniKani-driven Japanese reading practice tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
wk-reading = "wk_reading.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wk_reading"]
